<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:key="@string/pref_location_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_location_label" />

    <ListPreference
        android:defaultValue="@string/settings_temperature_unit_default"
        android:entries="@array/settings_temperature_units_labels"
        android:entryValues="@array/settings_temperature_unit_values"
        android:key="@string/pref_units_key"
        android:title="@string/settings_temperature_unit_label" />

    <CheckBoxPreference
        android:title="@string/pref_enable_notifications_label"
        android:key="@string/pref_enable_notifications_key"
        android:summaryOff="@string/pref_enable_notifications_false"
        android:summaryOn="@string/pref_enable_notifications_true"
        android:defaultValue="@string/pref_enable_notifications_default" />

</PreferenceScreen>